Fixed the "hex_to_rgb" bug - style.css is again a template. Implemented filtering.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -36,10 +36,14 @@
         <div class="container-fluid">
             <div class="intro-text">
                 <div class="intro-lead-in">
-                        Acute Market
+                    Acute Market
                 </div>
-                <div class="intro-heading">Digitaalisen terveydenhuollon sovellus- ja ratkaisukauppa
+                <div class="intro-heading">
+                    Digitaalisen terveydenhuollon sovellus- ja ratkaisukauppa
                 </div>
+                 <a href="#portfolio" class="page-scroll btn btn-xl">
+                    Tutustu
+                </a>
             </div>
         </div>
     </header>
