--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -302,15 +302,15 @@ header {
     text-align: center;
     color: #fff;
     background-attachment: scroll;
-    background-image: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6) ), url('{{ site.baseurl }}/img/acusphere.png');
+    background-image: radial-gradient( rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.6) ), url('{{ site.baseurl }}/img/important2.jpg');
     background-position: center center;
     background-repeat: none;
-    background-size: contain;
+    background-size: cover;
 }
 
 header .intro-text {
-    padding-top: 100px;
-    padding-bottom: 50px;
+    padding-top: 200px;
+    padding-bottom: 100px;
 }
 
 header .intro-text .intro-lead-in {
@@ -386,7 +386,7 @@ article img {
 }
 
 section {
-    padding: 100px 0;
+    padding: 120px 0;
 }
 
 section h2.section-heading {
@@ -411,6 +411,7 @@ section h3.section-subheading {
 
 #portfolio .row.first {
     margin-bottom: 40px;
+    padding-left: 20px;
 }
 
 #portfolio .portfolio-item {
