Finally giving up with hex_to_rgb filter: this plugin is not supported by GitHub. Fixed HTML5 semantic errors after validation.

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,11 +7,11 @@
                         Miksi Acute Market ?
                     </h2>
                     <h3 class="section-subheading text-muted">
-                        <p>Acute potilastietojärjestelmä on avoin ja laajennettava:<br> Acusfääri-ekosysteemistä löydät
+                        Acute potilastietojärjestelmä on avoin ja laajennettava:<br>
+                        Acusfääri-ekosysteemistä löydät
                         valmiita lisäosia, joiden avulla toteutat juuri sinun yrityksellesi sopivia
-                        räätälöityjä ja kilpailuetua tuovia digitaalisia ratkaisuja.</p>
-                        <p>Täältä löydät myös yhteystiedot IT-ammattilaisiin ja yrityksiin, 
-                            jotka ovat kokeneita Acuteen kytkettyjen räätälöityjen ratkaisujen tekijöitä.</p>
+                        räätälöityjä ja kilpailuetua tuovia digitaalisia ratkaisuja.
+
 
                     </h3>
                 </div>
