--- a/_includes/plugins_grid.html
+++ b/_includes/plugins_grid.html
@@ -4,7 +4,7 @@
             <div class="row first">
                 <div class="btn-group" data-toggle="buttons">
                     <label class="btn btn-info active" id="all-category">
-                        <input type="radio" name="filter" autocomplete="off" checked>kaikki
+                        <input type="radio" name="filter" checked>kaikki
                     </label>
                 {% assign sorted_cats = site.categories | sort %}
                 {% for category in sorted_cats %}
