--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top"><img src="/img/vitec_logo.png"></a>
+                <a class="navbar-brand page-scroll" href="#page-top"><img src="/img/vitec_logo.png" alt></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
