--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top"><img src="/portfolio/{{ page.logo }}"></a>
+                <a class="navbar-brand page-scroll" href="#page-top"><img src="/portfolio/{{ page.logo }}" alt></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
