--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -492,15 +492,14 @@ section h3.section-subheading {
 }
 
 #portfolio .portfolio-item .portfolio-caption h4 {
-    margin: 0;
     text-transform: none;
 }
 
 #portfolio .portfolio-item .portfolio-caption p {
-    margin: 0;
     font-family: {{ site.data.template.font.secondary }};
     font-size: 16px;
     font-style: italic;
+    line-height: 1.2em;
 }
 
 #portfolio * {
