--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -44,6 +44,7 @@ ul.nav {
     display: inline;
     width: 150px;
     height: 21px;
+    padding-left: 6px;
 }
 
 p {
@@ -206,6 +207,7 @@ fieldset[disabled] .btn-xl.active {
 .navbar-default .navbar-brand {
     font-family: "Lato","Helvetica Neue",Helvetica,Arial,cursive;
     color: #{{ site.data.template.color.primary }};
+    padding: 0 0 0 21px;
 }
 
 .navbar-default .navbar-brand:hover,
@@ -309,8 +311,8 @@ header {
 }
 
 header .intro-text {
-    padding-top: 200px;
-    padding-bottom: 100px;
+    padding-top: 80px;
+    padding-bottom: 30px;
 }
 
 header .intro-text .intro-lead-in {
@@ -319,7 +321,6 @@ header .intro-text .intro-lead-in {
     text-transform: uppercase;
     font-size: 22px;
     line-height: 22px;
-    text-shadow: 2px 1px 0px black; 
 }
 
 header .intro-text .intro-heading {
@@ -328,7 +329,6 @@ header .intro-text .intro-heading {
     font-size: 18px;
     font-weight: 700;
     line-height: 1.5em;
-    text-shadow: 2px 1px 0px black; 
 }
 
 header .intro-text .intro-heading p {
@@ -342,9 +342,13 @@ article img {
     margin-bottom: 20px;
 }
 
+article .thumb {
+    width: 25%;
+    opacity: 0.6;
+}
+
 .post-template article {
     margin-bottom: 50px;
-    text-align: justify;
 }
 
 .post-template article h1,
@@ -416,7 +420,12 @@ section h3.section-subheading {
 }
 
 #portfolio .row.first .btn {
-    font-size: 16px;
+    font-size: 18px;
+    background-color: #{{ site.data.template.color.primary }}
+}
+
+#portfolio .row.first .btn.active {
+    background-color: #{{ site.data.template.color.secondary }}
 }
 
 #portfolio .portfolio-item {
@@ -497,13 +506,15 @@ section h3.section-subheading {
 
 #portfolio .portfolio-item .portfolio-caption h4 {
     text-transform: none;
+    color: #{{ site.data.template.color.secondary-dark }};
 }
 
 #portfolio .portfolio-item .portfolio-caption p {
     font-family: {{ site.data.template.font.secondary }};
     font-size: 16px;
-    font-style: italic;
     line-height: 1.2em;
+    text-align: left;
+    color: #{{ site.data.template.color.secondary-dark }};
 }
 
 #portfolio * {
@@ -818,7 +829,8 @@ section#contact .text-danger {
 
 footer {
     padding: 25px 0;
-    text-align: center;
+    background-color: #4a4f55;
+    color: #aaa;
 }
 
 footer span.copyright {
@@ -833,6 +845,30 @@ footer ul.quicklinks {
     text-transform: none;
     font-family: {{ site.data.template.font.primary }};
     line-height: 40px;
+}
+
+footer .list-inline {
+    font-size: 25px;
+}
+
+footer .list-inline a {
+    color: #aaa;
+}
+
+footer a:hover {
+    color: #fff;
+}
+
+footer a {
+    color: #fff;
+}
+
+footer p {
+    line-height: 33px;
+}
+
+footer img {
+    padding-bottom: 1em;
 }
 
 ul.social-buttons {
