--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -39,12 +39,14 @@
         <div class="container">
             <div class="row">
                 <article class="post col-md-8 col-md-offset-2 hentry">
-                    <h1>{{ page.title }}</h1>
+                    <h1>
+                        {% if page.thumbnail %}
+                        <img class="thumb" src="/icons/{{ page.thumbnail }}">
+                        {% endif %}
+                        {{ page.title }}
+                    </h1>
                     {%if page.intro %}
                     <h3>{{ page.intro }}</h3>
-                    {% endif %}
-                    {% if page.img %}
-                    <img src="/portfolio/{{ page.img }}">
                     {% endif %}
                     {{ content }}
                 </article>
