--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -39,14 +39,20 @@
         <div class="container">
             <div class="row">
                 <article class="post col-md-8 col-md-offset-2 hentry">
-                    <h1>
+                    <div class="heading">
                         {% if page.thumbnail %}
-                        <img class="thumb" src="/icons/{{ page.thumbnail }}">
+                        <div class="heading-div">
+                            <img class="thumb" src="/icons/{{ page.thumbnail }}">
+                        </div>
                         {% endif %}
-                        {{ page.title }}
-                    </h1>
+                        <div class="heading-div">
+                            <h1>                  
+                                {{ page.title }}
+                            </h1>
+                        </div>
+                    </div>
                     {%if page.intro %}
-                    <h3>{{ page.intro }}</h3>
+                    <p class="ingress">{{ page.intro }}</p>
                     {% endif %}
                     {{ content }}
                 </article>
