Product description finalizations

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -39,7 +39,7 @@
                     Acute Market
                 </div>
                 <div class="intro-heading">
-                    Digitaalisen terveydenhuollon sovellus- ja ratkaisukauppa
+                    Digitaalisen terveydenhuollon sovellus- ja ratkaisukauppa<br>Acuten käyttäjille
                 </div>
             </div>
         </div>
