Partners page committed.

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,10 +7,10 @@
                         Miksi Acute Market ?
                     </h2>
                     <h3 class="section-subheading text-muted">
-                        Acute potilastietojärjestelmä on avoin ja laajennettava:<br>
-                        Acusfääri-ekosysteemistä löydät
-                        valmiita lisäosia, joiden avulla toteutat juuri sinun yrityksellesi sopivia
-                        räätälöityjä ja kilpailuetua tuovia digitaalisia ratkaisuja.
+                        Acute Marketista löydät valmiita
+                        sovelluksia, <br>
+                        joista kasaat yrityksellesi sopivan
+                        räätälöidyn kokonaisuuden.
 
 
                     </h3>
