--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -15,7 +15,8 @@ footer {
     color: #fff;
 }
 
-.post-template .content {
+.post-template .content,
+#partners-body .content {
     padding-top: 120px;
 }
 
@@ -48,12 +49,12 @@ ul.nav {
 }
 
 p {
-    font-size: 14px;
-    line-height: 1.75;
+    font-size: 16px;
+    line-height: 1.3;
 }
 
 p.large {
-    font-size: 16px;
+    font-size: 18px;
 }
 
 a,
@@ -264,7 +265,11 @@ fieldset[disabled] .btn-xl.active {
     background-color: #{{ site.data.template.color.primary }};
 }
 
-.post-template .navbar-default, .post-template .navbar-default.navbar-shrink {
+.post-template .navbar-default, 
+.post-template .navbar-default.navbar-shrink,
+#partners-body .navbar-default, 
+#partners-body .navbar-default.navbar-shrink
+{
     background-color: #0094c9;
 }
 
@@ -360,20 +365,24 @@ article .heading-div {
     display: table-cell;
 }
 
-.post-template article {
-    margin-bottom: 50px;
+article {
+    margin: 50px 0 50px 0;
 }
 
-.post-template article h2,
-.post-template article h3,
-.post-template article h4 {
+article h1 {
+    line-height: 1.7em;
+}
+
+article h2,
+article h3,
+article h4 {
     border-bottom: solid 1px #ccc;;
     line-height: 1.7em;
     text-align: left;
 }
 
-.post-template li {
-    font-size: 14px;
+article li {
+    font-size: 16px;
     line-height: 1.7;
 }
 
@@ -396,7 +405,7 @@ article .heading-div {
         margin-bottom: 50px;
         /* text-transform: uppercase; */
         font-family: {{ site.data.template.font.primary }};
-        font-size: 18px;
+        font-size: 21px;
         font-weight: 700;
         line-height: 1.5em;
     }
@@ -416,8 +425,7 @@ section h3.section-subheading {
     margin-bottom: 75px;
     text-transform: none;
     font-family: {{ site.data.template.font.secondary }};
-    font-size: 16px;
-    font-style: italic;
+    font-size: 18px;
     font-weight: 400;
 }
 
@@ -432,7 +440,7 @@ section h3.section-subheading {
 }
 
 #portfolio .row.first .btn {
-    font-size: 18px;
+    font-size: 21px;
     background-color: #{{ site.data.template.color.primary }}
 }
 
@@ -496,7 +504,7 @@ section h3.section-subheading {
     height: 20px;
     margin-top: -12px;
     text-align: center;
-    font-size: 20px;
+    font-size: 21px;
     color: #fff;
 }
 
@@ -839,6 +847,10 @@ section#contact .text-danger {
     color: #e74c3c;
 }
 
+#partners-body header {
+    display: none;
+}
+
 footer {
     padding: 25px 0;
     background-color: #4a4f55;
@@ -942,7 +954,7 @@ ul.social-buttons li a:active {
 .portfolio-modal .modal-content p.item-intro {
     margin: 20px 0 30px;
     font-family: {{ site.data.template.font.secondary }};
-    font-size: 16px;
+    font-size: 21px;
     font-style: italic;
 }
 
