--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top"><img src="/img/vitec_logo.png" alt></a>
+                <a class="navbar-brand page-scroll" href="/"><img src="/img/vitec_logo.png" alt></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -19,10 +19,13 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">Miksi ?</a>
+                        <a class="page-scroll" href="/#about">Miksi ?</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Market</a>
+                        <a class="page-scroll" href="/partners">Kumppaneille</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="/#portfolio">Market</a>
                     </li>
                 </ul>
             </div>
