--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top"><img src="/portfolio/{{ page.logo }}" alt></a>
+                <a class="navbar-brand page-scroll" href="/"><img src="/portfolio/{{ page.logo }}" alt></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -24,6 +24,9 @@
                     </li>
                     <li>
                         <a class="page-scroll" href="/#about">Miksi ?</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="/partners">Kumppaneille</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="/#portfolio">Market</a>
