--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,12 +7,11 @@
                         Miksi Acute Market ?
                     </h2>
                     <h3 class="section-subheading text-muted">
-                        Acute Marketista löydät valmiita
-                        sovelluksia, <br>
+                        Acute Marketista löydät ratkaisuja,
                         joista kasaat yrityksellesi sopivan
-                        räätälöidyn kokonaisuuden.
-
-
+                        räätälöidyn kokonaisuuden.  <br>
+                        Ratkaisut ovat joko valmiita sovelluksia, räätälöitäviä sovellusaihioita tai
+                        Acusfäärin toimijoiden kehityspalveluita.
                     </h3>
                 </div>
             </div>
