Partners list implemented, front page structure cleaned

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -22,7 +22,7 @@
                             {% include about_subject.html %}
                         {% endfor %}
                         <li class="timeline-inverted">
-							<a href="#portfolio">
+							<a href="/#portfolio">
 								<div class="timeline-image">
 									<h4>Tutustu ratkaisuihin</h4>
 								</div>
