--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,13 +23,13 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="/#about">Miksi ?</a>
+                        <a class="page-scroll" href="/why">Miksi ?</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="/partners">Kumppaneille</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="/#portfolio">Market</a>
+                        <a class="page-scroll" href="/">Market</a>
                     </li>
                 </ul>
             </div>
