--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <body id="page-top" class="index">
 
     {% include header.html %}
-    <div class="container">
+    <div class="container market">
         <ul class="nav nav-tabs portfolio-nav">
             <li class="active">
                 <a href="#portfolio-tab" data-toggle="tab" >Tuotteet</a>
