Changed Google Analytics to Google Tag Manager (GA to GTM) for tests. Fixed footer image url (https) bug.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,11 +25,11 @@
                 </div>
                 <div class="col-sm-3 col-md-3 col-lg-3">
                     <p>
-                        <img class="img-responsive" src="http://acute.fi/files/3314/8414/4207/white_logo.png" alt="" width="200" height="46">
+                        <img class="img-responsive" src="/img/white_logo.png" alt="" width="200" height="46">
                     </p>
                     <p>
                         <a href="http://www.vitec.fi/" target="_blank">
-                            <img class="img-responsive" src="http://acute.fi/files/8214/8716/0563/vitec_logo.png" alt="" width="200" height="28">
+                            <img class="img-responsive" src="/img/vitec_logo.png" alt="" width="200" height="28">
                         </a>
                     </p>
                     <p>
