--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,10 @@
   {% include head.html %}
 
     <body id="page-top" class="index">
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KR6F4R5"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
 
     {% include header.html %}
     <div class="container market">
