Minor text changes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
     <div class="container market">
         <ul class="nav nav-tabs portfolio-nav">
             <li class="active">
-                <a href="#portfolio-tab" data-toggle="tab" >Tuotteet</a>
+                <a href="#portfolio-tab" data-toggle="tab" >Tuotteet ja palvelut</a>
             </li>
             <li>
                 <a href="#partnerlist-tab" data-toggle="tab" >Yritykset</a>
