--- a/_layouts/partners.html
+++ b/_layouts/partners.html
@@ -21,6 +21,9 @@
                         <h2 id="contact">
                             Yhteystiedot
                         </h2>
+                        <h4>
+                            {{ page.contact-name }}
+                        </h4>
                         <p>
                             Sähköposti:
                             <a href="mailto://{{ page.contact-email }}">{{ page.contact-email }}</a>
@@ -29,7 +32,18 @@
                             Puhelin:
                             <a href="tel://{{ page.contact-tel | remove: ' ' }}">{{ page.contact-tel }}</a>
                         </p>
-                        {{ content }}
+                        <h4>
+                                {{ page.contact2-name }}
+                            </h4>
+                            <p>
+                                Sähköposti:
+                                <a href="mailto://{{ page.contact2-email }}">{{ page.contact2-email }}</a>
+                            </p>
+                            <p>
+                                Puhelin:
+                                <a href="tel://{{ page.contact2-tel | remove: ' ' }}">{{ page.contact2-tel }}</a>
+                            </p>
+                            {{ content }}
                     </article>
                 </div>
             </div>
