--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -350,6 +350,11 @@ header .intro-text .intro-heading p {
 article img {
     width: 45%;
     margin-bottom: 20px;
+    margin-right: 20px;
+}
+
+article img:last-child:first-child {
+    width: 90%;
 }
 
 article img.thumb {
