--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -316,7 +316,7 @@ header {
     background-attachment: scroll;
 /*    background-image: radial-gradient( rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.6) ), url('{{ site.baseurl }}/img/important2.jpg');
 */
-    background-image: url('{{ site.baseurl }}/img/important2.jpg');
+    background-image: url('{{ site.baseurl }}/img/headerbg4.jpg');
     background-position: center center;
     background-repeat: none;
     background-size: cover;
