--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,10 +25,12 @@
                 </div>
                 <div class="col-sm-3 col-md-3 col-lg-3">
                     <p>
-                        <img class="img-responsive" src="/img/white_logo.png" alt="" width="200" height="46">
+                        <a href="http://acute.fi" target="_blank">
+                            <img class="img-responsive" src="/img/white_logo.png" alt="" width="200" height="46">
+                        </a>
                     </p>
                     <p>
-                        <a href="http://www.vitec.fi/" target="_blank">
+                        <a href="http://www.vitecsoftware.com/fi" target="_blank">
                             <img class="img-responsive" src="/img/vitec_logo.png" alt="" width="200" height="28">
                         </a>
                     </p>
