Some spacing in the footer.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6 col-md-6 col-lg-6">
-                	<p>Myynti 
+                	<p>Myynti &nbsp;
                         <a href="tel:+358333950910">
                             03 3395 0910
                         </a>
@@ -11,7 +11,7 @@
                             myynti@vitecsoftware.com&nbsp;
                         </a>
                     </p>
-                    <p>Vaihde 
+                    <p>Vaihde &nbsp;
                         <a href="tel:+358333950900">
                             03 3395 0900
                         </a>
