--- a/_includes/partnerlist.html
+++ b/_includes/partnerlist.html
@@ -3,7 +3,7 @@
         <div class="container">
             {% assign partnerdata = site.data.partnerlist | sort: 'partner' %}
             {% for company in partnerdata %}
-            <a href="{{ company.link }}" class="partner-link">
+            <a href="{{ company.link }}" class="partner-link" target="_blank">
                 <div class="row">
                     {% if company.logobg %}
                     <div class="col-lg-4 col-md-4 col-sm-4 partner-img">
