--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="/"><img src="/portfolio/{{ page.logo }}" alt></a>
+                <a class="navbar-brand page-scroll" href="/"><div>Acute Market</div></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
