Updated sales e-mail

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,8 +7,8 @@
                             03 3395 0910
                         </a>
                         <br> 
-                        <a href="mailto:myynti@vitecsoftware.com">
-                            myynti@vitecsoftware.com&nbsp;
+                        <a href="mailto:myynti.acute@vitecsoftware.com">
+                            myynti.acute@vitecsoftware.com&nbsp;
                         </a>
                     </p>
                     <p>Vaihde &nbsp;
